# Algo2Labos

diccMat/: CMakeLists.txt
diccMat/src/: DiccMat.hpp  Makefile  test  test_dhc.cpp
taller1/src/: Pila.cpp  Pila.h  tests.cpp
taller2/src/: Pila.h  tests.cpp
taller4/src/: DiccString.hpp  tests.cpp
taller6/: CMakeLists.txt
taller6/src/: DiccHashCerrado.hpp  Makefile  test_dhc.cpp
tallerABB/base/: Conjunto.hpp  tests  tests.cpp
